# aftercare

./: .gitignore  CLAUDE.md  README.md  jounry.md  skills-lock.json
.claude/agents/: backend-dev.md  frontend-dev.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/agent/: __init__.py  prompts.py  runner.py
backend/app/agent/conditions/: __init__.py  base.py  copd.py  heart_failure.py  post_surgical.py
backend/app/agent/mcp/: __init__.py  server.py  tools.py
backend/app/routers/: __init__.py  alerts.py  chat.py  conditions.py  patients.py  whatsapp.py
backend/app/services/: checkins.py  twilio_client.py
backend/tests/: conftest.py  test_alert_dedup.py  test_checkins_history.py  test_checkins_today.py  test_conditions.py  test_escalation.py  test_llm_guardrails.py  test_matcher.py  test_report.py  test_resolve.py  test_routes.py  test_scheduler.py  test_stats.py  test_whatsapp.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/patient/: page.tsx
frontend/components/: Avatar.tsx  MockBadge.tsx  StatusPill.tsx
frontend/lib/: api.ts  mocks.ts  types.ts
